[package]
name = "risc-v-sim-web"
version = "0.1.0"
edition = "2024"

[lib]
name = "risc_v_sim_web"
path = "src/lib.rs"

[[bin]]
name = "risc-v-sim-web"
path = "src/main.rs"

[[bin]]
name = "populate_db"
path = "src/bin/populate_db.rs"

[dependencies]
axum = { version = "0.8.6", features = ["multipart", "query"] }
axum-extra = { version = "0.12.5", features = ["cookie"] }
tokio = { version = "1.48.0", features=[ "rt-multi-thread", "process", "fs", "sync", "signal", "macros" ] }
serde_json = { version = "1.0", features = ["raw_value"] }
anyhow = "1.0"
bytes = "1.10.1"
tracing = { version = "0.1.41", features = ["attributes"] }
tracing-subscriber = "0.3.2"
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "cors", "trace"] }
ulid = { version = "1.2.1", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
jsonwebtoken = "9.3"
oauth2 = "4.4"
reqwest = { version = "0.12", features = ["json"] }
mongodb = { version = "3.5.1", features = ["bson-3"] }
rand = "0.8"
futures-util = "0.3"
tokio-util = { version = "0.7", features = ["io"] }
time = { version = "0.3.47", features = ["serde"] }

[dev-dependencies]
reqwest = { version = "0.12.24", features = ["multipart", "stream"] }
